--- a/modelisation.Rmd
+++ b/modelisation.Rmd
@@ -37,6 +37,10 @@ setwd("C:/Nico/Github/Memoire")
 source("ArchiSimple/src/io_archisimple.R")
 ```
 
+```{r}
+heure_debut <- Sys.time()
+```
+
 # Fonction pour run le modèle
 
 ## Run archisimple
@@ -126,18 +130,17 @@ for (variety in c('Amiggo','Biggben','Hyperion','Juno','Swingg','Vegga')) {
   sims <- rbind(sims,rs)
 }
 setwd("../../../") 
-time_plot(sims,'Amiggo',time=c(40))
 ```
 
 ### Plot
 
 ```{r, echo=TRUE}
 for (variety in levels(sims$sim)) {
-  time_plot(sims,variety = variety, time=c(max(sims$Jour)))
-  print(paste('La profondeur max du système racinaire après 40 jours=',max(subset(sims,sim==variety)$Z1),'[mm]'))
-  print(paste0('Le système racinaire après 40 jours s étend de',min(subset(sims,sim==variety)$X1),'[mm] à ',max(subset(sims,sim==variety)$X1),'[mm] soit une largeur totale de :',
+  time_plot(sims,variety = variety, time=c(10,15,20,25,30,35,40))
+  print(paste('La profondeur max du système racinaire après', max(subset(sims,sim==variety)$Jour),'jours=',max(subset(sims,sim==variety)$Z1),'[mm]'))
+  print(paste0('Le système racinaire après' , max(subset(sims,sim==variety)$Jour),'jours s étend de',min(subset(sims,sim==variety)$X1),'[mm] à ',max(subset(sims,sim==variety)$X1),'[mm] soit une largeur totale de :',
                max(subset(sims,sim==variety)$X1)-min(subset(sims,sim==variety)$X1),'[mm]'))
-  print(paste('Le diamètre moyen des racines après 40 jours est =',mean(subset(sims, sim==variety)$Diam)))
+  print(paste('Le diamètre moyen des racines après', max(subset(sims,sim==variety)$Jour),' 40 jours est =',mean(subset(sims, sim==variety)$Diam)))
 }
 ```
 
@@ -195,7 +198,7 @@ setwd("../../../")
 ### Plot
 
 ```{r, echo=TRUE}
-time_plot(data = maize,variety = 'maize',time=40)
+time_plot(data = maize,variety = 'maize',time=c(40))
 print(paste('La profondeur max du système racinaire=',max(maize$Z1),'[mm]'))
 print(paste0('Le système racinaire s étend de',min(maize$X1),'[mm] à ',max(maize$X1),'[mm] soit une largeur totale de :', max(maize$X1)-min(maize$X1),'[mm]'))
 print(paste('Le diamètre moyen des racines est =',mean(maize$Diam)))
@@ -290,3 +293,10 @@ mono %>%
       coord_fixed()+
       labs(title='Generic Monocot')
 ```
+
+```{r}
+heure_fin <- Sys.time()
+duree <- heure_fin - heure_debut
+```
+
+<p> Temps de compilation : `r format(duree, units = "mins")` minutes </p>
